[package]
name = "polystem"
description = "Popular stemming algorithms for Information Retrieval"
version = "0.1.0"
authors = ["Luke Gallagher <luke@hypergeometric.net>"]
repository = "https://github.com/lgrz/polystem"
edition = "2018"
license = "MIT"
keywords = ["s-stemmer", "stemmer", "stem"]

[dependencies]
